// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for .NET 1`] = `
<div
  className="boxed-group-inner"
>
  <ol
    className="list-styled"
  >
    <li>
      onboarding.build
      <RenderOptions
        checked="dotnet"
        name="buildtool"
        onCheck={[Function]}
        optionLabelKey="onboarding.build"
        options={
          Array [
            "maven",
            "gradle",
            "dotnet",
            "other",
          ]
        }
      />
    </li>
    <DotNet
      baseUrl="nice_url"
      component={
        Object {
          "breadcrumbs": Array [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
        }
      }
    />
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    tutorials.finish
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly for Gradle 1`] = `
<div
  className="boxed-group-inner"
>
  <ol
    className="list-styled"
  >
    <li>
      onboarding.build
      <RenderOptions
        checked="gradle"
        name="buildtool"
        onCheck={[Function]}
        optionLabelKey="onboarding.build"
        options={
          Array [
            "maven",
            "gradle",
            "dotnet",
            "other",
          ]
        }
      />
    </li>
    <Gradle
      baseUrl="nice_url"
      component={
        Object {
          "breadcrumbs": Array [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
        }
      }
    />
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    tutorials.finish
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly for Maven 1`] = `
<div
  className="boxed-group-inner"
>
  <ol
    className="list-styled"
  >
    <li>
      onboarding.build
      <RenderOptions
        checked="maven"
        name="buildtool"
        onCheck={[Function]}
        optionLabelKey="onboarding.build"
        options={
          Array [
            "maven",
            "gradle",
            "dotnet",
            "other",
          ]
        }
      />
    </li>
    <Maven
      baseUrl="nice_url"
      component={
        Object {
          "breadcrumbs": Array [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
        }
      }
    />
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    tutorials.finish
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly for Other 1`] = `
<div
  className="boxed-group-inner"
>
  <ol
    className="list-styled"
  >
    <li>
      onboarding.build
      <RenderOptions
        checked="other"
        name="buildtool"
        onCheck={[Function]}
        optionLabelKey="onboarding.build"
        options={
          Array [
            "maven",
            "gradle",
            "dotnet",
            "other",
          ]
        }
      />
    </li>
    <Other
      baseUrl="nice_url"
      component={
        Object {
          "breadcrumbs": Array [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
        }
      }
    />
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    tutorials.finish
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={false}
  onOpen={[MockFunction]}
  open={true}
  renderForm={[Function]}
  stepNumber={3}
  stepTitle="onboarding.tutorial.with.jenkins.jenkinsfile.title"
/>
`;

exports[`should render correctly: Step wrapper with C 1`] = `
<Step
  finished={false}
  onOpen={[MockFunction]}
  open={true}
  renderForm={[Function]}
  stepNumber={3}
  stepTitle="onboarding.tutorial.with.jenkins.jenkinsfile.title"
/>
`;

exports[`should render correctly: initial content 1`] = `
<div
  className="boxed-group-inner"
>
  <ol
    className="list-styled"
  >
    <li>
      onboarding.build
      <RenderOptions
        name="buildtool"
        onCheck={[Function]}
        optionLabelKey="onboarding.build"
        options={
          Array [
            "maven",
            "gradle",
            "dotnet",
            "cfamily",
            "other",
          ]
        }
      />
    </li>
  </ol>
</div>
`;
